--- a/Frontends/package.json
+++ b/Frontends/package.json
@@ -1,25 +1,19 @@
 {
   "name": "MagiaRecord",
   "version": "1.0.0",
-  "description": "My extraordinary Nuxt.js project",
-  "author": "Atoyr",
+  "description": "My stunning Nuxt.js project",
+  "author": "atoyr",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "test": "jest"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "npm": "^6.14.4",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "vue-jest": "^4.0.0-0"
+    "@nuxtjs/vuetify": "^1.11.0"
   }
 }
