--- a/Frontends/package.json
+++ b/Frontends/package.json
@@ -12,10 +12,16 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
+    "npm": "^6.14.4",
     "nuxt": "^2.0.0",
-    "vue-chartjs": "^3.5.0"
+    "vue-chartjs": "^3.5.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.0"
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.11.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
   }
 }
