--- a/Frontends/package.json
+++ b/Frontends/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
+    "firebase": "^7.14.6",
     "node-sass": "^4.13.1",
     "npm": "^6.14.4",
     "nuxt": "^2.0.0",
