--- a/webapps/package.json
+++ b/webapps/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "chart.js": "^2.9.3",
     "firebase": "^7.14.6",
     "node-sass": "^4.13.1",
