--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/vuetify": "^1.11.0",
+    "firebase-tools": "^8.5.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2"
   }
